@@ -11,6 +11,12 @@
 	Wrote method.
 	(PokerRendererTests.test15_checkUpdateLagMaxWithoutGameObject):
 	Wrote method.
+	(PokerRendererTests.MockGame.isRunning): Wrote method.
+	(PokerRendererTests.MockGame.__init__): Wrote method.
+	(PokerRendererTests.MockPokerFactory.__init__): added
+	gameIsRunning parameter.
+	(PokerRendererTests.test17_maybeStartLookCardsNoGameRunning):
+	Wrote method.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
